Correction CORS SecurityConfig: allowed-origins depuis application.yml
La config CORS dans SecurityConfig avait localhost:4200 hardcoded,
bloquant les preflight OPTIONS depuis Firebase (403 Forbidden).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>